tests/rosetta/out/Swift/15-puzzle-solver.error
swiftc: exit status 1
/tmp/15-puzzle-solver.swift:2:7: error: cannot find 'testpkg' in scope
1 | // Generated by Mochi compiler v0.10.26 on 2025-07-16T13:15:27Z
2 | print(testpkg.FifteenPuzzleExample())
  |       `- error: cannot find 'testpkg' in scope
3 | 
