tests/rosetta/out/Swift/15-puzzle-solver.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T13:15:27Z
print(testpkg.FifteenPuzzleExample())
